--- a/Asset/Css/style.css
+++ b/Asset/Css/style.css
@@ -3680,3 +3680,13 @@ ol {
 		font-size: 24px;
 	}
 }
+.breadcrumb__links a {
+	font-size: 15px;
+	font-weight: 500;
+	color: #111111;
+	margin-right: 18px;
+	display: inline-block;
+	position: relative;
+	/* padding-right: ; */
+	padding-left: 5px;
+}
