shop page ajax func done

--- a/Asset/Css/style.css
+++ b/Asset/Css/style.css
@@ -1237,6 +1237,13 @@ ol {
 	transform: rotate(360deg);
 }
 
+.product__hover li:hover a svg {
+	color: #ffffff;
+	-webkit-transform: rotate(360deg);
+	-ms-transform: rotate(360deg);
+	transform: rotate(360deg);
+}
+
 .product__hover li a {
 	font-size: 18px !important;
 	color: #111111;
